<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainTV"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@color/background"
        android:fontFamily="@font/roboto_black"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/backgroundDown"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/company"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/package_type"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/source_address"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/destination_address"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/price"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:background="@color/backgroundDown"
        android:id="@+id/mainLV"
        android:layout_width="match_parent"
        android:layout_height="450dp" />

    <LinearLayout
        android:background="@color/backgroundDown"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/clean_button"
            android:backgroundTint="@color/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="Clean"
            android:textAllCaps="true"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/ok_button"
            android:backgroundTint="@color/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="133dp"
            android:fontFamily="sans-serif"
            android:text="Ok"
            android:textAllCaps="true"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>